<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Общие -->
    <string name="app_name">Расписание</string>
    <string name="loading">Загрузка</string>

    <!-- Экран авторизации -->
    <string name="auth_title">Авторизация</string>
    <string name="login_empty">Укажите логин</string>
    <string name="password_empty">Введите пароль</string>
    <string name="login_error">Ошибка входа. Проверьте правильность логина и пароля и повторите попытку</string>
    <string name="auth_success">Авторизация пройдена</string>
    
    
    <string name="last_update">Последняя синхронизация:</string>
    <string name="subject">Предмет:</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>
    <string name="place">Аудитория:</string>
    <string name="group">Группа:</string>
    <string name="my_info">Профиль</string>
    <string name="check_updates">Обновить</string>
    <string name="settings">Настройки</string>
    <string name="get_token">Получить токен</string>
    <string name="exit">Выход</string>
    <string name="check">Проверка</string>
    <string name="download">Загрузить</string>
    <string name="new_changes">Изменения:</string>
    <string name="last_change">Последнее изменение:</string>
    <string name="sure_to_exit">Вы уверены, что хотите выйти из текущего профиля?</string>
    <string name="present">ЕСТЬ</string>
    <string name="apsent">НЕТ</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="email">Почта</string>
    <string name="curr_profile_info">ПРОФИЛЬ</string>

    <string-array name="days_of_week">
        <item>Воскресенье</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string name="close">Закрыть</string>
    <string name="schedule">Расписание</string>
    <string name="updates">Обновления</string>
    <string name="confirm">Подтвердить получение</string>
    <string name="agree">Принять</string>
    <string name="disagree">Отказаться</string>
    <string name="send">Отправить подтвержение</string>
    <string name="no_updates">Нет измений</string>
    <string name="start">Начало:</string>
    <string name="end">Конец:</string>
    <string name="day_of_week">День недели:</string>
    <string name="exclude">Кроме:</string>
    <string name="enter">Вход</string>
    <string name="autorising">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <!-- Названия и описание настроек -->
    <string name="pref_server_category_tittle">Настройки сервера</string>
    <string name="pref_sync_category_tittle">Настройки синхронизации</string>
    
    <string name="pref_address_host_tittle">Хост</string>
    <string name="pref_address_host_summary"></string>
    <string name="pref_address_host_id">address_host</string>
    
    <string name="pref_address_port_tittle">Порт</string>
    <string name="pref_address_port_summary"></string>
    <string name="pref_address_port_id">address_port</string>
    
    <string name="pref_sync_tittle">Синхронизация</string>
    <string name="pref_sync_summary">С календарем Google</string>
    <string name="pref_sync_id">sync</string>
    
    <string name="pref_account_list_tittle">Аккаунт</string>
    <string name="pref_account_list_summary"></string>
    <string name="pref_account_list_id">account_list</string>

</resources>