<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group>
        <item
            android:id="@+id/menu_check_updates"
            android:icon="@drawable/ic_action_refresh"
            android:showAsAction="always"
            android:title="@string/check_updates"/>
    </group>
    <group>
        <item
            android:icon="@drawable/ic_action_overflow"
            android:showAsAction="always"
            android:title="More">
            <menu>
                <item
                    android:id="@+id/menu_info"
                    android:icon="@drawable/ic_action_about"
                    android:title="@string/my_info"/>
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/menu_exit"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/exit"/>
            </menu>
        </item>
    </group>

</menu>