<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:longClickable="true"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/authText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/auth_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/loginEText"
        style="@style/CustomEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/authText"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login"
        android:text="" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passEText"
        style="@style/CustomEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/loginEText"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/logInButton"
        style="@style/PinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/authText"
        android:layout_alignRight="@+id/authText"
        android:layout_below="@+id/passEText"
        android:layout_marginTop="32dp"
        android:text="@string/enter"
        android:textSize="20sp" />

</RelativeLayout>